kube/db/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: db
  name: db
  namespace: data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: db
    spec:
      containers:
      - image: postgres:15
        name: postgres
        resources: {}
        volumeMounts:
        - name: db-init-script
          mountPath: /docker-entrypoint-initdb.d/
        - name: db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-init-script
        configMap:
          name: db-init-script
      - name: db-data
        persistentVolumeClaim:
          claimName: db-data
status: {}
